기획요청으로 인력풀 수정

--- a/portal/html/USR-1242-F-LIST.html
+++ b/portal/html/USR-1242-F-LIST.html
@@ -327,7 +327,7 @@
                 <div class="search_item">
 
                     <div class="tit_box row">
-                        <h4><span></span>분야</h4>
+                        <h4><span></span>직무분야</h4>
                         <span>※ 복수선택 가능(3개 이내)</span>
                     </div>
 
@@ -336,55 +336,63 @@
                             <div class="chk_box">
                                 <span>
                                     <input type="checkbox" id="chk_39">
-                                    <label for="chk_39">전체</label>
+                                    <label for="chk_39">VC 전문인력</label>
                                 </span>
                                 <span>
                                     <input type="checkbox" id="chk_40">
-                                    <label for="chk_40">기술사</label>
+                                    <label for="chk_40">경영·사무</label>
                                 </span>
                                 <span>
                                     <input type="checkbox" id="chk_41">
-                                    <label for="chk_41">변호사</label>
+                                    <label for="chk_41">마케팅·광고·홍보</label>
                                 </span>
                                 <span>
                                     <input type="checkbox" id="chk_42">
-                                    <label for="chk_42">공인회계사</label>
+                                    <label for="chk_42">IT·인터넷</label>
                                 </span>
                                 <span>
                                     <input type="checkbox" id="chk_43">
-                                    <label for="chk_43">변리사</label>
+                                    <label for="chk_43">디자인</label>
                                 </span>
                                 <span>
                                     <input type="checkbox" id="chk_44">
-                                    <label for="chk_44">경영 - 기술지도사(3년이상경력)</label>
+                                    <label for="chk_44">무역·유통</label>
                                 </span>
                                 <span>
                                     <input type="checkbox" id="chk_45">
-                                    <label for="chk_45">전문인력</label>
+                                    <label for="chk_45">영업·고객상담</label>
                                 </span>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="chk_box">
                                 <span>
                                     <input type="checkbox" id="chk_46">
-                                    <label for="chk_46">경영관리</label>
+                                    <label for="chk_46">서비스</label>
                                 </span>
                                 <span>
                                     <input type="checkbox" id="chk_47">
-                                    <label for="chk_47">투자심사</label>
+                                    <label for="chk_47">연구개발·설계</label>
                                 </span>
                                 <span>
                                     <input type="checkbox" id="chk_48">
-                                    <label for="chk_48">ICT제조</label>
+                                    <label for="chk_48">생산·제조</label>
                                 </span>
                                 <span>
                                     <input type="checkbox" id="chk_49">
-                                    <label for="chk_49">ICT서비스</label>
+                                    <label for="chk_49">교육</label>
                                 </span>
                                 <span>
                                     <input type="checkbox" id="chk_50">
-                                    <label for="chk_50">전기/기계/장비</label>
+                                    <label for="chk_50">건설</label>
+                                </span>
+                                <span>
+                                    <input type="checkbox" id="chk_51">
+                                    <label for="chk_51">의료</label>
+                                </span>
+                                <span>
+                                    <input type="checkbox" id="chk_52">
+                                    <label for="chk_52">미디어</label>
+                                </span>
+                                <span>
+                                    <input type="checkbox" id="chk_53">
+                                    <label for="chk_53">기타</label>
                                 </span>
                             </div>
                         </li>
