내 정보 관리 수정

--- a/portal/html/USR-2041-F-FORM.html
+++ b/portal/html/USR-2041-F-FORM.html
@@ -344,6 +344,12 @@
                                             <div class="inp_box min">
                                                 <input type="text" id="input_012" value="홍길동" disabled>
                                             </div>
+                                            <div class="chk_box">
+                                                <span>
+                                                    <input type="checkbox" id="chk_0221">
+                                                    <label for="chk_0221" class="dialog-link" data-target="#note_03">전문투자자 여부</label>
+                                                </span>
+                                            </div>
                                         </div>
                                     </td>
                                 </tr>
@@ -357,6 +363,7 @@
                                             <div class="box_btn">
                                                 <button class="search">중복확인</button>
                                             </div>
+                                            <div class="txt_etc">※  한글, 영문, 숫자를 혼용하여 10자 이하로 입력하세요.</div>
                                         </div>
                                     </td>
                                 </tr>
@@ -466,9 +473,6 @@
                     </div>
 
                     <div class="btn_box_group type_01">
-                        <div class="btn_box max">
-                            <a href="javascript:void(0);" class="btn_blue dialog-link" data-target="#note_03">전문투자자 변경 신청</a>
-                        </div>
                         <div class="btn_box max">
                             <a href="javascript:void(0);" class="btn_blue trans_enterprise_btn">기업회원 전환</a>
                         </div>
