--- a/portal/html/USR-20411-F-FORM.html
+++ b/portal/html/USR-20411-F-FORM.html
@@ -357,6 +357,7 @@
                                             <div class="box_btn">
                                                 <button class="search">중복확인</button>
                                             </div>
+                                            <div class="txt_etc">※  한글, 영문, 숫자를 혼용하여 10자 이하로 입력하세요.</div>
                                         </div>
                                     </td>
                                 </tr>
