벤처투자마트 업데이트

--- a/pub_list.html
+++ b/pub_list.html
@@ -277,10 +277,10 @@
                     division: '',
                     depth1:'벤처투자마트 - 벤처투자마트 신청(TAB-3)',
                     path:'./portal/html/USR-1054-F-FORM.html',
-                    date:'2022-09-19',
+                    date:'2022-10-31',
                     mdate:'2022-09-27',
-                    con:'재설계',
-                    etc:''
+                    con:'완료',
+                    etc:'수정완료'
                 },
                 {
                     division: '',
@@ -295,19 +295,19 @@
                     division: '',
                     depth1:'벤처투자마트 - 신청 정보 확인',
                     path:'./portal/html/USR-1056-F-LIST.html',
-                    date:'2022-09-29',
+                    date:'2022-10-31',
                     mdate:'2022-10-11',
-                    con:'재설계',
-                    etc:''
+                    con:'완료',
+                    etc:'수정완료'
                 },
                 {
                     division: '',
                     depth1:'벤처투자마트 - 신청 정보 상세(TAB-3)',
                     path:'./portal/html/USR-1056-F-DTL.html',
                     date:'',
-                    mdate:'2022-10-11',
-                    con:'재설계',
-                    etc:''
+                    mdate:'2022-10-31',
+                    con:'완료',
+                    etc:'수정완료'
                 },
                 {
                     division: '',
@@ -315,7 +315,7 @@
                     path:'./portal/html/USR-1052-B-LIST.html',
                     date:'2022-08-29',
                     mdate:'2022-09-26',
-                    con:'재설계',
+                    con:'완료',
                     etc:'[게시판 타입1 - 목록]'
                 },
                 {
@@ -324,7 +324,7 @@
                     path:'./portal/html/USR-1052-B-DTL.html',
                     date:'2022-08-29',
                     mdate:'2022-09-26',
-                    con:'재설계',
+                    con:'완료',
                     etc:'[게시판 타입1 - 상세]'
                 },
                 {
