벤처투자마트 2차신청 완료 및 기타 퍼블수정

--- a/portal/html/pub_guide.html
+++ b/portal/html/pub_guide.html
@@ -409,7 +409,7 @@
                     <dt>데이트피커</dt>
                     <dd>
                         <div class="inp_box datepicker_box">
-                            <input type="text" class="datepicker">
+                            <input type="text" class="datepicker_day">
                         </div>
                     </dd>
                 </dl>
