--- a/pub_list.html
+++ b/pub_list.html
@@ -284,12 +284,75 @@
                 },
                 {
                     division: '',
-                    depth1:'벤처투자마트 - 벤처투자마트 2차신청',
+                    depth1:'벤처투자마트 - 벤처투자마트 2차신청(TAB-5)',
                     path:'./portal/html/USR-1055-F-FORM.html',
-                    date:'',
+                    date:'2022-11-01',
                     mdate:'2022-10-04',
-                    con:'재설계',
-                    etc:'<span class="red">기획서 없음</span>'
+                    con:'완료',
+                    etc:''
+                },
+                {
+                    division: '',
+                    depth1:'벤처투자마트 2차신청 - 인력정보 목록',
+                    path:'./portal/html/USR-1055-1-F-FORM.html',
+                    date:'2022-11-01',
+                    mdate:'',
+                    con:'완료',
+                    etc:''
+                },
+                {
+                    division: '',
+                    depth1:'벤처투자마트 2차신청 - 인력정보 추가',
+                    path:'./portal/html/USR-1055-2-F-FORM.html',
+                    date:'2022-11-01',
+                    mdate:'',
+                    con:'완료',
+                    etc:''
+                },
+                {
+                    division: '',
+                    depth1:'벤처투자마트 2차신청 - 주식정보 목록',
+                    path:'./portal/html/USR-1055-3-F-FORM.html',
+                    date:'2022-11-01',
+                    mdate:'',
+                    con:'완료',
+                    etc:''
+                },
+                {
+                    division: '',
+                    depth1:'벤처투자마트 2차신청 - 주식정보 추가',
+                    path:'./portal/html/USR-1055-4-F-FORM.html',
+                    date:'2022-11-01',
+                    mdate:'',
+                    con:'완료',
+                    etc:''
+                },
+                {
+                    division: '',
+                    depth1:'벤처투자마트 2차신청 - 재무정보 목록',
+                    path:'./portal/html/USR-1055-5-F-FORM.html',
+                    date:'2022-11-01',
+                    mdate:'',
+                    con:'완료',
+                    etc:''
+                },
+                {
+                    division: '',
+                    depth1:'벤처투자마트 2차신청 - 재무정보 추가',
+                    path:'./portal/html/USR-1055-6-F-FORM.html',
+                    date:'2022-11-01',
+                    mdate:'',
+                    con:'완료',
+                    etc:''
+                },
+                {
+                    division: '',
+                    depth1:'벤처투자마트 2차신청 - 기술/권리 및 IR등록',
+                    path:'./portal/html/USR-1055-7-F-FORM.html',
+                    date:'2022-11-01',
+                    mdate:'',
+                    con:'완료',
+                    etc:''
                 },
                 {
                     division: '',
