통합검색 수정

--- a/portal/html/USR-2110-F-LIST.html
+++ b/portal/html/USR-2110-F-LIST.html
@@ -321,12 +321,11 @@
                         </div>
                         <div class="search_word">
                             <span class="tit">내가 찾은 검색어</span>
-                            <a href="">벤처투자마트<span>삭제</span></a>
-                            <a href="">벤처투자마트<span>삭제</span></a>
-                            <a href="">벤처투자마트<span>삭제</span></a>
-                            <a href="">벤처투자마트<span>삭제</span></a>
-                            <a href="">벤처투자마트<span>삭제</span></a>
-                            <a href="">벤처투자마트<span>삭제</span></a>
+                            <div class="word_box"><a href="">벤처투자마트</a><button class="delete">삭제</button></div>
+                            <div class="word_box"><a href="">벤처투자마트</a><button class="delete">삭제</button></div>
+                            <div class="word_box"><a href="">벤처투자마트</a><button class="delete">삭제</button></div>
+                            <div class="word_box"><a href="">벤처투자마트</a><button class="delete">삭제</button></div>
+                            <div class="word_box"><a href="">벤처투자마트</a><button class="delete">삭제</button></div>
                         </div>
 
                     </div>
