기업홍보 수정

--- a/pub_list.html
+++ b/pub_list.html
@@ -235,7 +235,7 @@
                     date:'2022-08-26',
                     mdate:'2022-09-19',
                     con:'완료',
-                    etc:'[게시판 타입1 - 목록] 0908 공지고정 수정/서치박스 셀렉트 추가'
+                    etc:'1103 전체수정'
                 },
                 {
                     division: '',
@@ -244,7 +244,7 @@
                     date:'2022-08-26',
                     mdate:'2022-09-19',
                     con:'완료',
-                    etc:'[게시판 타입1 - 상세]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -253,7 +253,7 @@
                     date:'2022-09-07',
                     mdate:'2022-09-19',
                     con:'완료',
-                    etc:'[게시판 타입1 - 등록수정]'
+                    etc:''
                 },
                 {
                     division: '',
