--- a/portal/html/USR-2011-F-FORM.html
+++ b/portal/html/USR-2011-F-FORM.html
@@ -347,7 +347,9 @@
                     <ul class="list">
                         <li>입력하신 인증정보는 실명인즐을 위한 자료로 사용되며 이외의 용도로 사용 또는 제공되지 않습니다.</li>
                         <li>인증이 정상적으로 작동하지 않으면 브라우저의 팝업 차단 기능을 해제하신 후 이용하시기 바랍니다.</li>
-                        <li>인증관련문의<span>- NICE평가정보(주) 고객센터 Tel: 1600-1522</span></li>
+                        <!-- 1103 PM요청으로 인한 삭제
+                            <li>인증관련문의<span>- NICE평가정보(주) 고객센터 Tel: 1600-1522</span></li>
+                         -->
                     </ul>
                 </div>
                 
