아이핀인증 삭제

--- a/portal/html/USR-2030-F-FORM.html
+++ b/portal/html/USR-2030-F-FORM.html
@@ -322,17 +322,17 @@
                                 <em>본인 명의의 휴대폰 정보로 인증 후 가입하실 수 있습니다.</em>
                                 <a href="javascript:void(0);" class="dialog-link" data-target="#note_01">인증하기</a>
                             </li>
-                            <li class="ipin">
+                            <!-- <li class="ipin">
                                 <strong>아이핀 인증</strong>
                                 <span class="img"></span>
                                 <em>본인 아이핀 정보로 인증 후 가입하실 수 있습니다.</em>
                                 <a href="javascript:void(0);" class="dialog-link" data-target="#note_01">인증하기</a>
-                            </li>
+                            </li> -->
                         </ul>
                         <ul class="list">
                             <li>입력하신 인증정보는 실명인증을 위한 자료로 사용되며 이외의 용도로 사용 또는 제공되지 않습니다.</li>
                             <li>인증이 정상적으로 작동하지 않으면 브라우저의 팝업 차단 기능을 해제하신 후 이용하시기 바랍니다.</li>
-                            <li>인증관련문의<span>- NICE평가정보(주) 고객센터 Tel: 1600-1522</span></li>
+                            <!-- <li>인증관련문의<span>- NICE평가정보(주) 고객센터 Tel: 1600-1522</span></li> -->
                         </ul>
                     </div>
                 </div>
