--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -303,7 +303,7 @@
                     <div class="swiper-slide">
                         <div class="slide_wrap first">
                             <div class="img">
-                                <video autoplay loop muted data-autoplay>
+                                <video autoplay muted data-autoplay>
                                     <source data-src="../images/video/CK_ta01150000215_1080p.mp4" ype="video/mp4">
                                     해당 브라우저는 video 태그를 지원하지 않습니다.
                                 </video>
