투자자 검색 css수정

--- a/portal/html/USR-1020-F-LIST.html
+++ b/portal/html/USR-1020-F-LIST.html
@@ -998,7 +998,7 @@
                                             </div>
                                             <div class="info">
                                                 <span>업력 7년 11개월</span>
-                                                <span>운영규모 100억</span>
+                                                <span>운영규모 <em class="comma">100</em>억</span>
                                                 <span>이메일 ins-venture@naver.com</span>
                                             </div>
                                             <div class="hashtag">
