정책페이지 완료 / 메인 비디오 수정 / 회원가입-제3자위탁동의 추가

--- a/portal/html/USR-1211-H-CONTN.html
+++ b/portal/html/USR-1211-H-CONTN.html
@@ -314,7 +314,34 @@
 
                 <div class="tit_box">
                     <h3>정책</h3>
+                    <span></span>
                 </div>
+
+                <div class="tit_box">
+                    <h4><span></span>고객유형별 정책</h4>
+                </div>
+
+                <ul class="policy_list type_01">
+                    <li><a href="https://www.mss.go.kr/site/smba/supportPolicy/supportPolicyList.do?target=1" target="_blank" title="새 창 이동">중소기업</a></li>
+                    <li><a href="https://www.mss.go.kr/site/smba/supportPolicy/supportPolicyList.do?target=2" target="_blank" title="새 창 이동">창업·벤처기업</a></li>
+                    <li><a href="https://www.mss.go.kr/site/smba/supportPolicy/supportPolicyList.do?target=3" target="_blank" title="새 창 이동">소상공인</a></li>
+                    <li><a href="https://www.mss.go.kr/site/smba/supportPolicy/supportPolicyList.do?target=4" target="_blank" title="새 창 이동">공통사항</a></li>
+                </ul>
+
+                <div class="tit_box">
+                    <h4><span></span>분야별 정책</h4>
+                </div>
+
+                <ul class="policy_list type_02">
+                    <li><a href="https://www.mss.go.kr/site/smba/supportPolicy/supportPolicyList.do?cmm_code=BB020100" target="_blank" title="새 창 이동">금융</a></li>
+                    <li><a href="https://www.mss.go.kr/site/smba/supportPolicy/supportPolicyList.do?cmm_code=BB020200" target="_blank" title="새 창 이동">창업</a></li>
+                    <li><a href="https://www.mss.go.kr/site/smba/supportPolicy/supportPolicyList.do?cmm_code=BB020300" target="_blank" title="새 창 이동">기술</a></li>
+                    <li><a href="https://www.mss.go.kr/site/smba/supportPolicy/supportPolicyList.do?cmm_code=BB020400" target="_blank" title="새 창 이동">인력</a></li>
+                    <li><a href="https://www.mss.go.kr/site/smba/supportPolicy/supportPolicyList.do?cmm_code=BB020500" target="_blank" title="새 창 이동">수출</a></li>
+                    <li><a href="https://www.mss.go.kr/site/smba/supportPolicy/supportPolicyList.do?cmm_code=BB020600" target="_blank" title="새 창 이동">내수</a></li>
+                    <li><a href="https://www.mss.go.kr/site/smba/supportPolicy/supportPolicyList.do?cmm_code=BB021100" target="_blank" title="새 창 이동">벤처</a></li>
+                    <li><a href="https://www.mss.go.kr/site/smba/supportPolicy/supportPolicyList.do?cmm_code=BB020700" target="_blank" title="새 창 이동">기타</a></li>
+                </ul>
 
             </div>
 
