--- a/portal/html/USR-2010-F-FORM.html
+++ b/portal/html/USR-2010-F-FORM.html
@@ -841,18 +841,62 @@
                         </div>
 
                         <div class="agree_box_content">
-                            수집한 개인정보의 제3자 제공 및 취급·위탁 동의<br/>
-                            수집한 개인정보의 제3자 제공 및 취급·위탁 동의<br/>
-                            수집한 개인정보의 제3자 제공 및 취급·위탁 동의<br/>
-                            수집한 개인정보의 제3자 제공 및 취급·위탁 동의<br/>
-                            수집한 개인정보의 제3자 제공 및 취급·위탁 동의<br/>
-                            수집한 개인정보의 제3자 제공 및 취급·위탁 동의<br/>
-                            수집한 개인정보의 제3자 제공 및 취급·위탁 동의<br/>
-                            수집한 개인정보의 제3자 제공 및 취급·위탁 동의<br/>
-                            수집한 개인정보의 제3자 제공 및 취급·위탁 동의<br/>
-                            수집한 개인정보의 제3자 제공 및 취급·위탁 동의<br/>
-                            수집한 개인정보의 제3자 제공 및 취급·위탁 동의<br/>
-                            수집한 개인정보의 제3자 제공 및 취급·위탁 동의<br/>
+
+                            <!-- 상세내용 -->
+                            <div class="txt_content_box">
+
+                                <dl class="txt_item">
+                                    <dt>제5조(개인정보의 제3자 제공에 관한 사항)</dt>
+                                    <dd>
+                                        <ol class="txt_item_numlist">
+                                            <li>
+                                                <span class="l_num">1</span>한국벤처캐피탈협회는 원활한 개인정보 업무처리를 위하여 다음과 같이 개인정보 처리업무를 위탁하고 있습니다.
+                                                <div class="tbl_box">
+                                                    <table>
+                                                        <caption>개인정보의 처리목적, 개인정보의 처리 및 보유기간, 처리하는 개인정보의 항목</caption>
+                                                        <colgroup>
+                                                            <col width="25%">
+                                                            <col width="25%">
+                                                            <col width="25%">
+                                                            <col width="25%">
+                                                        </colgroup>
+                                                        <thead>
+                                                            <tr>
+                                                                <th scope="col">위탁하는 업무의 내용</th>
+                                                                <th scope="col">위탁받는 자</th>
+                                                                <th scope="col">위탁받는 자의 연락처</th>
+                                                                <th scope="col">위탁기간</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            <tr>
+                                                                <td>포털 운영 및 유지보수</td>
+                                                                <td>아사달시스템</td>
+                                                                <td>1544-8442</td>
+                                                                <td>~2024.1.15</td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td>포털 운영 및 유지보수</td>
+                                                                <td>로고스시스템</td>
+                                                                <td>02-558-6222</td>
+                                                                <td>~2024.1.15</td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <span class="l_num">2</span>한국벤처캐피탈협회는 위탁계약 체결시 「개인정보 보호법」 제26조에 따라 위탁업무 수행목적 외 개인정보 처리금지, 기술적․관리적 보호조치, 재위탁 제한, 수탁자에 대한 관리․감독, 손해배상 등 책임에 관한 사항을 계약서 등 문서에 명시하고, 수탁자가 개인정보를 안전하게 처리하는지를 감독하고 있습니다.
+                                            </li>
+                                            <li>
+                                                <span class="l_num">3</span>위탁업무의 내용이나 수탁자가 변경될 경우에는 지체없이 본 개인정보 처리방침을 통하여 공개하도록 하겠습니다.
+                                            </li>
+                                        </ol>
+                                    </dd>
+                                </dl>
+            
+                            </div>
+                            
                         </div>
 
                         <div class="rdo_box">
