--- a/pub_list.html
+++ b/pub_list.html
@@ -506,10 +506,10 @@
                     division: '정보 서비스',
                     depth1:'정책',
                     path:'./portal/html/USR-1211-H-CONTN.html',
-                    date:'',
+                    date:'2022-11-08',
                     mdate:'2022-10-14',
-                    con:'작업중',
-                    etc:'<span class="red">컨텐츠 없음</span><span class="blue">디자인 필요</span>[2차디자인]'
+                    con:'완료',
+                    etc:''
                 },
                 {
                     division: '',
