커뮤니티 수정

--- a/portal/html/USR-1334-F-DASH.html
+++ b/portal/html/USR-1334-F-DASH.html
@@ -1361,7 +1361,7 @@
                                         </div>
 
                                         <!-- 게시판 테이블 -->
-                                        <div class="tbl_longcard type_chk add">
+                                        <div class="tbl_longcard type_chk">
                                             <ul>
                                                 <li>
                                                     <div class="chk">
