메인 동영상 loop수정

--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -303,8 +303,8 @@
                     <div class="swiper-slide">
                         <div class="slide_wrap first">
                             <div class="img">
-                                <video autoplay muted data-autoplay>
-                                    <source data-src="../images/video/CK_ta01150000215_1080p.mp4" ype="video/mp4">
+                                <video autoplay muted loop data-autoplay>
+                                    <source data-src="../images/video/km_20221108_1080p_.mp4" ype="video/mp4">
                                     해당 브라우저는 video 태그를 지원하지 않습니다.
                                 </video>
                             </div>
