커뮤니티 버튼추가 및 투자유치희망기업검색 소재지 버튼추가

--- a/portal/html/USR-1010-F-LIST.html
+++ b/portal/html/USR-1010-F-LIST.html
@@ -529,6 +529,9 @@
                                     <input type="checkbox" id="chk_421">
                                     <label for="chk_421">그 외 지방</label>
                                 </span>
+                                <span class="chk_btn">
+                                    <button>더보기 +</button>
+                                </span>
                             </div>
                             
                             <div class="chk_list_more">
