--- a/portal/html/USR-1334-F-DASH.html
+++ b/portal/html/USR-1334-F-DASH.html
@@ -329,8 +329,17 @@
                                     <span class="green">바이오/의료</span>
                                     <span class="brown">친목/모임</span>
                                 </div>
-                                <div class="btn_box">
-                                    <a href="" class="btn_setting">설정</a>
+                                
+                                <div class="btn_box_group">
+                                    <div class="btn_box">
+                                        <a href="" class="btn_setting">설정</a>
+                                    </div>
+                                    <div class="btn_box">
+                                        <a href="" class="btn_white">커뮤니티 가입</a>
+                                    </div>
+                                    <div class="btn_box">
+                                        <a href="" class="btn_gray">비밀번호 변경</a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="tit">
