메인 글자텍스트수정

--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -437,19 +437,19 @@
                                             <div class="swiper-slide">
                                                 <a href="">
                                                     <span></span>
-                                                    <strong>벤처기업검색</strong>
+                                                    <strong>투자유치 희망기업<br/>검색</strong>
                                                 </a>
                                             </div>
                                             <div class="swiper-slide">
                                                 <a href="">
                                                     <span></span>
-                                                    <strong>동향보고서</strong>
+                                                    <strong>통계/연구 보고서</strong>
                                                 </a>
                                             </div>
                                             <div class="swiper-slide">
                                                 <a href="">
                                                     <span></span>
-                                                    <strong>온라인IR</strong>
+                                                    <strong>기업홍보</strong>
                                                 </a>
                                             </div>
                                             <div class="swiper-slide">
