승인대기중 추가

--- a/portal/html/USR-1334-F-DASH1.html
+++ b/portal/html/USR-1334-F-DASH1.html
@@ -340,6 +340,9 @@
                                     <div class="btn_box">
                                         <a href="" class="btn_gray">비밀번호 변경</a>
                                     </div>
+                                    <div class="state_waiting">
+                                        <span>승인 대기중 ⋯</span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="tit">
@@ -1073,7 +1076,7 @@
                                             </ul>
                                         </div>
                                         <div class="card_set">
-                                            <ul class="on">
+                                            <ul>
                                                 <li><a href="javascript:void(0);" class="dialog-link" data-target="#alpop_02">파트너 신청</a></li>
                                                 <li><a href="javascript:void(0);" class="dialog-link" data-target="#note_01">쪽지보내기</a></li>
                                             </ul>
@@ -1088,7 +1091,7 @@
                                             </ul>
                                         </div>
                                         <div class="card_set">
-                                            <ul class="on">
+                                            <ul>
                                                 <li><a href="javascript:void(0);" class="dialog-link" data-target="#alpop_02">파트너 신청</a></li>
                                                 <li><a href="javascript:void(0);" class="dialog-link" data-target="#note_01">쪽지보내기</a></li>
                                             </ul>
@@ -1103,7 +1106,7 @@
                                             </ul>
                                         </div>
                                         <div class="card_set">
-                                            <ul class="on">
+                                            <ul>
                                                 <li><a href="javascript:void(0);" class="dialog-link" data-target="#alpop_02">파트너 신청</a></li>
                                                 <li><a href="javascript:void(0);" class="dialog-link" data-target="#note_01">쪽지보내기</a></li>
                                             </ul>
@@ -1118,7 +1121,7 @@
                                             </ul>
                                         </div>
                                         <div class="card_set">
-                                            <ul class="on">
+                                            <ul>
                                                 <li><a href="javascript:void(0);" class="dialog-link" data-target="#alpop_02">파트너 신청</a></li>
                                                 <li><a href="javascript:void(0);" class="dialog-link" data-target="#note_01">쪽지보내기</a></li>
                                             </ul>
@@ -1133,7 +1136,7 @@
                                             </ul>
                                         </div>
                                         <div class="card_set">
-                                            <ul class="on">
+                                            <ul>
                                                 <li><a href="javascript:void(0);" class="dialog-link" data-target="#alpop_02">파트너 신청</a></li>
                                                 <li><a href="javascript:void(0);" class="dialog-link" data-target="#note_01">쪽지보내기</a></li>
                                             </ul>
@@ -1148,7 +1151,7 @@
                                             </ul>
                                         </div>
                                         <div class="card_set">
-                                            <ul class="on">
+                                            <ul>
                                                 <li><a href="javascript:void(0);" class="dialog-link" data-target="#alpop_02">파트너 신청</a></li>
                                                 <li><a href="javascript:void(0);" class="dialog-link" data-target="#note_01">쪽지보내기</a></li>
                                             </ul>
@@ -1163,7 +1166,7 @@
                                             </ul>
                                         </div>
                                         <div class="card_set">
-                                            <ul class="on">
+                                            <ul>
                                                 <li><a href="javascript:void(0);" class="dialog-link" data-target="#alpop_02">파트너 신청</a></li>
                                                 <li><a href="javascript:void(0);" class="dialog-link" data-target="#note_01">쪽지보내기</a></li>
                                             </ul>
