메인 모바일확인

--- a/portal/html/main_03.html
+++ b/portal/html/main_03.html
@@ -25,6 +25,7 @@
     <style>
         .swiper-container .slide_wrap .img video {
             min-width: inherit;
+            height: 200vh;
         }
     </style>
 </head>
