--- a/portal/html/main_03.html
+++ b/portal/html/main_03.html
@@ -260,7 +260,7 @@
                     <div class="swiper-slide">
                         <div class="slide_wrap first">
                             <div class="img">
-                                <video autoplay muted loop data-autoplay>
+                                <video autoplay muted loop data-autoplay playsinline>
                                     <source data-src="../images/video/km_20221108_1080p_.mp4" ype="video/mp4">
                                     해당 브라우저는 video 태그를 지원하지 않습니다.
                                 </video>
