커뮤니티 이름 쪽지보내기 추가

--- a/portal/html/USR-1334-F-DASH.html
+++ b/portal/html/USR-1334-F-DASH.html
@@ -300,8 +300,17 @@
                         </div>
                         <div class="bottom">
                             <ul>
-                                <li>개설일</li>
-                                <li>커뮤니티 회원 수</li>
+                                <li>커뮤니티장 
+                                    <a href="javascript:void(0);" class="pop_mini">지연</a>
+                                    <div class="card_set">
+                                        <ul>
+                                            <li><a href="">파트너 신청</a></li>
+                                            <li><a href="javascript:void(0);" class="dialog-link" data-target="#note_01">쪽지보내기</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li>개설일 <strong>2022-02-12</strong></li>
+                                <li>커뮤니티 회원 수 <strong>322</strong></li>
                             </ul>
                         </div>
                     </div>
