--- a/portal/html/USR-1341-F-LIST.html
+++ b/portal/html/USR-1341-F-LIST.html
@@ -719,7 +719,7 @@
                         <div class="tab_content_03">
 
                             <div class="tab_group mytalk_box">
-                                <div class="tab_btn">
+                                <div class="tab_btn public_box">
                                     <ul>
                                         <li class="on"><a href="" rel="tab_content_04">MY Talk (3건)</a></li>
                                         <li><a href="" rel="tab_content_05">파트너 신청 대기 목록 (38명)</a></li>
@@ -727,6 +727,36 @@
                                         <li><a href="" rel="tab_content_07">내가 추가한 파트너 목록 (38명)</a></li>
                                         <li><a href="" rel="tab_content_08">차단한 파트너 목록 (3명)</a></li>
                                     </ul>
+                                    <div class="public_btn">
+                                        <button>설정</button>
+                                        <!-- 상태변경 팝업 -->
+                                        <div class="public_content">
+                                            <div class="rdo_box">
+                                                <span>
+                                                    <input type="radio" id="radio_001" name="rdo_group_02" checked="">
+                                                    <label for="radio_001">전체공개</label>
+                                                </span>
+                                                <span>
+                                                    <input type="radio" id="radio_002" name="rdo_group_02">
+                                                    <label for="radio_002">파트너 공개</label>
+                                                </span>
+                                                <span>
+                                                    <input type="radio" id="radio_003" name="rdo_group_02">
+                                                    <label for="radio_003">비공개 (본인만 공개)</label>
+                                                </span>
+                                            </div>
+            
+                                            <div class="btn_box_group">
+                                                <div class="btn_box">
+                                                    <a href="" class="btn_gray shadow close">취소</a>
+                                                </div>
+                                                <div class="btn_box">
+                                                    <a href="javascript:void(0);" class="btn_blue shadow close" onclick="onShowToast('상태가 변경되었습니다.')">수정</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- //상태변경 팝업 -->
+                                    </div>
                                 </div>
                                 <div class="tab_content">
             
