투자유치희망기업검색 설정버튼 수정/폐쇄버튼 왼쪽수정

--- a/portal/html/USR-1333-F-FORM.html
+++ b/portal/html/USR-1333-F-FORM.html
@@ -558,6 +558,9 @@
                 </div>
 
                 <div class="btn_box_group type_tbl">
+                    <div class="btn_box bg left">
+                        <a href="" class="btn_delete">폐쇄</a>
+                    </div>
                     <div class="btn_box bg">
                         <a href="" class="btn_save">등록</a>
                     </div>
