--- a/portal/html/USR-1010-F-DTL.html
+++ b/portal/html/USR-1010-F-DTL.html
@@ -279,8 +279,10 @@
                                     <span class="mauve">기업업종</span>
                                     <span class="green">벤처기업</span>
                                 </div>
-                                <div class="btn_box">
-                                    <a href="" class="btn_setting">설정</a>
+                                <div class="btn_box_group">
+                                    <div class="btn_box">
+                                        <a href="" class="btn_setting">설정</a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="tit">
