투자유치희망기업검색 수정

--- a/portal/html/USR-1010-F-DTL.html
+++ b/portal/html/USR-1010-F-DTL.html
@@ -329,6 +329,12 @@
                     </div>
                 </div>
 
+                <div class="community_main_btn">
+                    <div class="btn_box">
+                        <a href="./USR-1010-F-LIST.html" class="btn_arrow_right">투자유치 희망기업 검색 목록으로 이동</a>
+                    </div>
+                </div>
+
                 <!-- 탭 -->
                 <div class="tab_group">
                     <div class="tab_btn">
